ch4/4.9/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-multipath
spec:
  parentRefs:
  - name: external
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ing-default
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /hn
    backendRefs:
    - name: ing-hn
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /ip
    backendRefs:
    - name: ing-ip
      port: 80
